# FlashNote

./: .gitignore  FlashNote.filters  FlashNote.sln  README.md
Code/: CMakeLists.txt
Code/FlashNote/: CMakeLists.txt  DrawerFunc.cpp  DrawerFunc.h  NoteMainWindow.h  SeperateLine.cpp  alignmentcombobox.cpp  colorgallery.h  coloritemdelegate.h  font_combobox.h  note_editwindow.h  popupwidget.h  stdafx.h
Code/FlashNote/comctrl/: menubutton.h
Code/FlashNote/res/: icons.qrc
Code/FlashNote/res/icons/: mainicon.ai  socialmediashare.ai  trash.ai
Code/FlashNote/res/icons/16x16/: 16x16.ai
Code/FlashNote/style/: ToolButtonStyle.h
Code/client/: CMakeLists.txt  client.cpp
Code/dbservice/: CMakeLists.txt  dbservice.cpp  dbservice.h  sql_const.h
Code/facility/: CMakeLists.txt  com_sptr.cpp  com_sptr.h  common_define.h  iunknown.h
Code/guimain/: CMakeLists.txt  DrawerFunc.cpp  FontColorComboBox.cpp  FramelessLineEdit.cpp  LeftSideItemDelegate.cpp  LeftSideItemDelegate.h  NoteMainWindow.cpp  NoteMainWindow.h  NoteMainWindow.ui  SeperateLine.cpp  addbookdlg.cpp  addbookdlg.h  addbookdlg.ui  alignmentcombobox.cpp  alignmentcombobox.h  booklistview.cpp  booklistview.h  booklistview.ui  bookmenubutton.cpp  bookmenubutton.h  bookviewmodel.cpp  bookviewmodel.h  capturehook.cpp  colorgallery.cpp  colorgallery.h  coloritemdelegate.cpp  common_types.h  floatingmenubutton.cpp  floatingmenubutton.h  font_combobox.cpp  font_combobox.h  fontitemdelegate.cpp  fontitemdelegate.h  fontsize_combobox.cpp  fontsize_combobox.h  globalsearcheditor.cpp  globalsearcheditor.h  guihelper.cpp  guihelper.h  guimain.cpp  (+43 more)
Code/guimain/comctrl/: menubutton.cpp  menubutton.h  toolbutton.cpp  toolbutton.h
Code/guimain/highlighter/: cppsyntaxhighlighter.cpp  cppsyntaxhighlighter.h
Code/guimain/mindmap/: linknoteitem.cpp  linknoteitem.h  mindlink.cpp  mindlink.h  mindmapscene.cpp  mindmapscene.h  mindmapview.cpp  mindmapview.h  mindmapwidget.cpp  mindmapwidget.h  mindnode.cpp  mindnode.h  mindnodebutton.cpp  mindnodebutton.h  mindprogressnode.cpp  mindprogressnode.h  mindtransaction.cpp  mindtransaction.h  node.xml
Code/guimain/model/: notebookmodel.cpp  notebookmodel.h
Code/guimain/qtexamples/: MltpDlgs1.cpp  MltpDlgs1.h  MltpDlgs2.cpp  MltpDlgs2.h
Code/guimain/res/: font.qrc  icons.qrc
Code/guimain/res/icons/: Bold.ai  Italic.ai  add.ai  add_hover.ai  alarm.ai  allnotes.ai  btn_addnote.ai  camera.ai  center_alignment.ai  checked.ai  close.ai  codeblock.ai  default_color.ai  downarrow.ai  download.ai  finish.ai  flashnote.ai  floatwin.ai  fontcolor.ai  highlighted.ai  info.ai  item_id.ai  item_symbol.ai  left_alignment.ai  link_note.ai  listview.ai  mainicon.ai  menu_mindmap.ai  menu_mindmap_on.ai  menu_newnote.ai  menu_newnote_on.ai  menu_schedule.ai  menu_schedule_on.ai  more.ai  morecolor.ai  newnotemenu_1.ai  newnotemenu_2.ai  notebookmenu.ai  photo.ai  redo.ai  (+22 more)
Code/guimain/res/icons/16x16/: Bold.ai  Italic.ai  alarm.ai  attachment.ai  center_alignment.ai  close.ai  codeblock.ai  download.ai  finish.ai  fontcolor.ai  highlighted.ai  info.ai  item_id.ai  item_symbol.ai  left_alignment.ai  link_note.ai  more.ai  newnotemenu.ai  notebookmenu.ai  right_alignment.ai  socialmediashare.ai  strikeout.ai  table.ai  twoside_alignment.ai  underline.ai  white_close.ai
Code/guimain/res/icons/20x20/: link_note.ai
Code/guimain/res/icons/24x24/: floatwin.ai  link_note.ai  more.ai  reset.ai
Code/guimain/res/icons/28x28/: link_note.ai
Code/guimain/res/icons/32x32/: floatwin32.ai  link_note.ai  menu_mindmap.ai  menu_mindmap_on.ai  menu_newnote.ai  menu_newnote_on.ai  menu_schedule.ai  menu_schedule_on.ai  menu_schedule_on2.ai
Code/guimain/richeditor/: mrichtextedit.cpp  richtexteditor.cpp  richtexteditor.h
Code/guimain/screenshot/: screenshotwindow.cpp  screenshotwindow.h  screentoolbar.cpp  screentoolbar.h  screenwidget.cpp  screenwidget.h
Code/guimain/shortcut/core/: qxtglobal.cpp
Code/guimain/shortcut/gui/: qxtglobalshortcut.cpp  qxtglobalshortcut.h  qxtglobalshortcut_win.cpp  qxtglobalshortcut_x11.cpp  qxtwindowsystem.cpp  qxtwindowsystem_win.cpp  qxtwindowsystem_x11.cpp  x11info.cpp
Code/guimain/style/: MyStyle.cpp  MyStyle.h  ToolButtonStyle.cpp  toolbuttonstyleoption.cpp
Code/guimain/transaction/: transaction.cpp  transaction.h
Code/guimain/ts/: uimain.ts  zh_qm.bat  zh_ts.bat
Code/include/: note_types.h
Code/notecore/: CMakeLists.txt  framework.h  guidconst.cpp  guidconst.h  guiddefine.cpp  guiddefine.h  notebase.cpp  notebase.h  notecontainer.h  notecore.cpp  notecore.h  notecore.idl  notecore2.h  notecore_c.c  notecore_i.c  notecore_p.c  notecore_s.c  notecoreinit.cpp  notecoreinit.h
Code/notehook/: CMakeLists.txt  framework.h  notehook.cpp  notehook.h
Code/rpcservice/: CMakeLists.txt  rpcservice.cpp  rpcservice.h  thriftclient.cpp  thriftclient.h
Code/server/: CMakeLists.txt  NoteInfo_server.cpp  UserInfo_server.cpp  hello.thrift  helloServer.cpp  notestructure.thrift
Code/server/gen-cpp/: Hello.cpp  Hello.h  NoteInfo.cpp  NoteInfo.h  NoteInfo_server.skeleton.cpp  NoteServer.cpp  NoteServer.h  NoteServer_server.skeleton.cpp  UserInfo.cpp  UserInfo.h  UserInfo_server.skeleton.cpp  UserServer.cpp  UserServer.h  UserServer_server.skeleton.cpp  hello_types.cpp  hello_types.h  notestructure_constants.cpp  notestructure_constants.h  notestructure_types.cpp  notestructure_types.h
Code/setup/: setup.sh
Code/setup/startup/database/: note.db
FlashNote/: DrawerFunc.cpp  FlashNote.cpp  FlashNote.vcxproj  FlashNote.vcxproj.filters  FontColorComboBox.cpp  FontColorComboBox.h  FramelessLineEdit.cpp  FramelessLineEdit.h  LeftSideItemDelegate.cpp  LeftSideItemDelegate.h  MyStyle.cpp  MyStyle.h  NoteMainWindow.cpp  NoteMainWindow.h  NoteMainWindow.ui  SeperateLine.h  alignmentcombobox.cpp  alignmentcombobox.h  colorgallery.cpp  colorgallery.h  colorgalleryview.cpp  colorgalleryview.h  coloritemdelegate.cpp  coloritemdelegate.h  colortableview.cpp  colortableview.h  font_combobox.cpp  fontsize_combobox.cpp  fontsize_combobox.h  listpane.cpp  listpane.h  note_editwindow.cpp  stdafx.h  (+4 more)
(+38 files in other folders)
